@@ -1,0 +1,5 @@
+import relative_import.x
+
+if __name__ == "__main__":
+    print relative_import.x.a.maxint
+    print relative_import.x.b.maxint
