@@ -2,8 +2,11 @@
 
 	* Bump version number to 0.6.8.
 
-    * Updated test suite to be smarted about which interpreters
+    * Updated test suite to be smarter about which interpreters
     to use for testing and to output stats.
+
+    * Merged modulefinder.py r59200 from the Python svn trunk into mf.py
+    in order to support relative imports.
 
 2008-04-17  Thomas Heller  <theller@python.net>
 
